@@ -3,7 +3,10 @@ requires 'locale';
 requires 'sort';
 requires 'Carp';
 requires 'Exporter' => '5.57';
-requires 'Path::Tiny' => '0.097';
+requires 'File::Glob';
+requires 'File::Spec';
 requires 'Sort::filevercmp';
+test_requires 'Cwd';
+test_requires 'File::pushd';
+test_requires 'File::Temp';
 test_requires 'Test::More' => '0.88';
-test_requires 'File::chdir';
