@@ -4,13 +4,22 @@ use strict;
 use warnings;
 use Carp 'croak';
 use Exporter 'import';
-use Path::Tiny 'path';
+use File::Glob ':bsd_glob';
+use File::Spec;
 use Sort::filevercmp 'fileversort';
 use sort 'stable';
 
 our $VERSION = '0.005';
 
 our @EXPORT = 'ls';
+
+my $glob_flags;
+BEGIN {
+  $glob_flags = GLOB_NOCHECK | GLOB_QUOTE | GLOB_TILDE;
+  # as in File::Glob
+  $glob_flags |= GLOB_NOCASE if $^O =~ /\A(?:MSWin32|VMS|os2|dos|riscos)\z/;
+}
+use constant BSD_GLOB_FLAGS => $glob_flags;
 
 sub ls {
   my ($dir, $options);
@@ -21,10 +30,10 @@ sub ls {
   }
   $dir = '.' unless defined $dir and length $dir;
   $options ||= {};
+
+  $dir = _expand_tilde($dir); # do homedir expansion
   
-  $dir = path($dir); # do glob expansion
-  
-  opendir my $dh, "$dir" or croak "Failed to open directory '$dir': $!";
+  opendir my $dh, $dir or croak "Failed to open directory '$dir': $!";
   my @entries = readdir $dh;
   closedir $dh or croak "Failed to close directory '$dir': $!";
   
@@ -75,11 +84,32 @@ sub ls {
   return @entries;
 }
 
+sub _expand_tilde {
+  my ($dir) = @_;
+  # parse path into segments
+  my ($volume, $directories, $file) = File::Spec->splitpath($dir, 1);
+  my @parts = File::Spec->splitdir($directories);
+  return $dir unless @parts and $parts[0] =~ m/^~/;
+  # expand first segment
+  my $pattern = $parts[0];
+  $pattern =~ s/([\\*?{[])/\\$1/g;
+  my ($expanded) = File::Glob::bsd_glob($pattern, BSD_GLOB_FLAGS);
+  return $dir if !defined $expanded or $expanded eq $parts[0];
+  # replace first segment with new path
+  ($volume, $directories) = File::Spec->splitpath($expanded, 1);
+  splice @parts, 0, 1, File::Spec->splitdir($directories);
+  return File::Spec->catpath($volume, File::Spec->catdir(@parts), $file);
+}
+
 sub _stat_sorter {
   my ($dir, $entry, $index) = @_;
-  $entry = $dir->child($entry);
-  my @stat = stat $entry;
-  croak "Failed to stat '$entry': $!" unless @stat;
+  my $path = File::Spec->catfile($dir, $entry);
+  my @stat = stat $path;
+  unless (@stat) { # try as a subdirectory
+    $path = File::Spec->catdir($dir, $entry);
+    @stat = stat $path;
+  }
+  croak "Failed to stat '$path': $!" unless @stat;
   return $stat[$index];
 }
 
@@ -124,7 +154,7 @@ similar manner to the GNU coreutils command L<ls(1)>.
 
 Takes a directory path and optional hashref of options, and returns a list of
 items in the directory. Home directories represented by C<~> will be expanded
-by L<Path::Tiny/"path">. If no directory path is passed, the current working
+by L<File::Glob>. If no directory path is passed, the current working
 directory will be used. Like in L<ls(1)>, the returned names are relative to
 the passed directory path, so if you want to use a filename (such as passing it
 to C<open> or C<stat>), you must prefix it with the directory path, with C<~>
@@ -132,7 +162,7 @@ expanded if present.
 
   # Check the size of a file in current user's home directory
   my @contents = ls '~';
-  say -s glob('~') . "/$contents[0]";
+  say -s "$ENV{HOME}/$contents[0]";
 
 By default, hidden files and directories (those starting with C<.>) are
 omitted, and the results are sorted by name according to the current locale
