@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Do tilde expansion directly with File::Glob instead of using Path::Tiny
 
 0.004     2017-07-15 18:24:22 EDT
   - Default to current working directory if no directory passed
